--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
                     About Me
                 </h2>
                 <p class="border-[--primary-yellow] border-b-4 mb-5"></p>
-                <div class="grid grid-cols-4 items-center justify-between space-x-3 mb-8">
-                    <button data-section="education" data-augmented-ui="tl-clip br-clip border"
+                <div class="grid grid-cols-4 items-center justify-between space-x-3 mb-6">
+                    <button data-section="education" data-augmented-ui="br-clip border"
                         class="btn border border-[--primary-red] rounded-none bg-black section-1-aug bg-opacity-10 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400 focus:text-[--primary-cyan] focus:bg-cyan-400 focus:bg-opacity-10 focus:border focus:border-[--primary-cyan] focus:ring-cyan-900 focus:outline:none text-center">
                         <p class="hidden font-medium lg:inline-block text-md lg:text-sm">Education</p>
                     </button>
-                    <button data-section="experience" data-augmented-ui="tl-clip br-clip border"
+                    <button data-section="experience" data-augmented-ui="br-clip border"
                         class="btn border border-[--primary-red] rounded-none bg-black section-1-aug bg-opacity-10 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400 focus:text-[--primary-cyan] focus:bg-cyan-400 focus:bg-opacity-10 focus:border focus:border-[--primary-cyan] focus:ring-cyan-900 focus:outline:none text-center">
                         <p class="hidden font-medium lg:inline-block text-md lg:text-sm">Experience</p>
                     </button>
-                    <button data-section="skills" data-augmented-ui="tl-clip br-clip border"
+                    <button data-section="skills" data-augmented-ui="br-clip border"
                         class="btn border border-[--primary-red] rounded-none bg-black section-1-aug bg-opacity-10 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400 focus:text-[--primary-cyan] focus:bg-cyan-400 focus:bg-opacity-10 focus:border focus:border-[--primary-cyan] focus:ring-cyan-900 focus:outline:none text-center">
                         <p class="hidden font-medium lg:inline-block text-md lg:text-sm">Skills</p>
                     </button>
-                    <button data-section="projects" data-augmented-ui="tl-clip br-clip border"
+                    <button data-section="projects" data-augmented-ui="br-clip border"
                         class="btn border border-[--primary-red] rounded-none bg-black section-1-aug bg-opacity-10 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400 focus:text-[--primary-cyan] focus:bg-cyan-400 focus:bg-opacity-10 focus:border focus:border-[--primary-cyan] focus:ring-cyan-900 focus:outline:none text-center">
                         <p class="hidden font-medium lg:inline-block text-md lg:text-sm">Projects</p>
                     </button>
@@ -90,10 +90,14 @@
                       <div class="terminal-content">
                         <span id="AboutDevTypeText" class="typeing"></span><span class='blinker'>&#32;</span>
                       </div>
+                      <section class="mt-10"></section>
                     </code>
                     </div>
+
                 </div>
+                
             </div>
+
             <!-- Second Section -->
             <div class="col-span-1 p-8">
                 <h2 class="main-aug text-xl text-center text-[--primary-cyan] mb-4 py-2.5" data-augmented-ui="
