Fixed color of button

--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@
                 <p class="border-[--primary-yellow] border-b-4 mb-5"></p>
                 <div class="grid grid-cols-4 items-center justify-between space-x-3 mb-6">
                     <button data-section="education" data-augmented-ui="br-clip border"
-                        class="btn border border-[--primary-red] rounded-none section-1-aug bg-opacity-20 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400 focus:text-cyan-400 focus:bg-cyan-400 focus:bg-opacity-10 focus:border focus:border-cyan-400 focus:ring-cyan-900 focus:outline-none">
+                        class="btn border border-[--primary-red] rounded-none section-1-aug bg-gray-950 bg-opacity-20 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400 focus:text-cyan-400 focus:bg-cyan-400 focus:bg-opacity-10 focus:border focus:border-cyan-400 focus:ring-cyan-900 focus:outline-none">
                         <p class="font-medium text-md lg:text-sm">Education</p>
                     </button>
                     <button data-section="experience" data-augmented-ui="br-clip border"
-                        class="btn border border-[--primary-red] rounded-none section-1-aug bg-opacity-20 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400 focus:text-cyan-400 focus:bg-cyan-400 focus:bg-opacity-10 focus:border focus:border-cyan-400 focus:ring-cyan-900 focus:outline-none">
+                        class="btn border border-[--primary-red] rounded-none section-1-aug bg-gray-950 bg-opacity-20 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400 focus:text-cyan-400 focus:bg-cyan-400 focus:bg-opacity-10 focus:border focus:border-cyan-400 focus:ring-cyan-900 focus:outline-none">
                         <p class="font-medium text-md lg:text-sm">Experience</p>
                     </button>
                     <button data-section="skills" data-augmented-ui="br-clip border"
-                        class="btn border border-[--primary-red] rounded-none section-1-aug bg-opacity-20 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400 focus:text-cyan-400 focus:bg-cyan-400 focus:bg-opacity-10 focus:border focus:border-cyan-400 focus:ring-cyan-900 focus:outline-none">
+                        class="btn border border-[--primary-red] rounded-none section-1-aug bg-gray-950 bg-opacity-20 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400 focus:text-cyan-400 focus:bg-cyan-400 focus:bg-opacity-10 focus:border focus:border-cyan-400 focus:ring-cyan-900 focus:outline-none">
                         <p class="font-medium  text-md lg:text-sm">Skills</p>
                     </button>
                     <button data-section="projects" data-augmented-ui="br-clip border"
-                        class="btn border border-[--primary-red] rounded-none section-1-aug bg-opacity-20 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400 focus:text-cyan-400 focus:bg-cyan-400 focus:bg-opacity-10 focus:border focus:border-cyan-400 focus:ring-cyan-900 focus:outline-none">
+                        class="btn border border-[--primary-red] rounded-none section-1-aug bg-gray-950 bg-opacity-20 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400 focus:text-cyan-400 focus:bg-cyan-400 focus:bg-opacity-10 focus:border focus:border-cyan-400 focus:ring-cyan-900 focus:outline-none">
                         <p class="font-medium text-md lg:text-sm">Projects</p>
                     </button>
                 </div>
