--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@
                 <p class="border-[--primary-yellow] border-b-4 mb-5"></p>
                 <div class="grid grid-cols-4 items-center justify-between space-x-3 mb-6">
                     <button data-section="education" data-augmented-ui="br-clip border"
-                        class="btn border border-[--primary-red] rounded-none section-1-aug bg-gray-950 bg-opacity-20 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400 focus:text-cyan-400 focus:bg-cyan-400 focus:bg-opacity-10 focus:border focus:border-cyan-400 focus:ring-cyan-900 focus:outline-none">
+                        class="btn border border-[--primary-red] rounded-none section-1-aug bg-gray-950 bg-opacity-20 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400">
                         <p class="font-medium text-md lg:text-sm">Education</p>
                     </button>
                     <button data-section="experience" data-augmented-ui="br-clip border"
-                        class="btn border border-[--primary-red] rounded-none section-1-aug bg-gray-950 bg-opacity-20 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400 focus:text-cyan-400 focus:bg-cyan-400 focus:bg-opacity-10 focus:border focus:border-cyan-400 focus:ring-cyan-900 focus:outline-none">
+                        class="btn border border-[--primary-red] rounded-none section-1-aug bg-gray-950 bg-opacity-20 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400">
                         <p class="font-medium text-md lg:text-sm">Experience</p>
                     </button>
                     <button data-section="skills" data-augmented-ui="br-clip border"
-                        class="btn border border-[--primary-red] rounded-none section-1-aug bg-gray-950 bg-opacity-20 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400 focus:text-cyan-400 focus:bg-cyan-400 focus:bg-opacity-10 focus:border focus:border-cyan-400 focus:ring-cyan-900 focus:outline-none">
+                        class="btn border border-[--primary-red] rounded-none section-1-aug bg-gray-950 bg-opacity-20 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400">
                         <p class="font-medium  text-md lg:text-sm">Skills</p>
                     </button>
                     <button data-section="projects" data-augmented-ui="br-clip border"
-                        class="btn border border-[--primary-red] rounded-none section-1-aug bg-gray-950 bg-opacity-20 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400 focus:text-cyan-400 focus:bg-cyan-400 focus:bg-opacity-10 focus:border focus:border-cyan-400 focus:ring-cyan-900 focus:outline-none">
+                        class="btn border border-[--primary-red] rounded-none section-1-aug bg-gray-950 bg-opacity-20 text-[--primary-red] transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400">
                         <p class="font-medium text-md lg:text-sm">Projects</p>
                     </button>
                 </div>
@@ -111,6 +111,10 @@
                     </code>
                     </div>
 
+                </div>
+                <div class="flex justify-end pt-10 pe-5">
+                    <button data-augmented-ui="br-clip border"
+                        class="btn border border-[--secondary-yellow] rounded-none clear-btn bg-[--secondary-yellow] bg-opacity-20 text-gray-950 transition-all duration-600 hover:bg-cyan-400 hover:bg-opacity-10 hover:text-cyan-400">Terminate</button>
                 </div>
 
             </div>
@@ -138,6 +142,7 @@
                     tl-2-clip-x br-clip border">
                     Contact Information
                 </h2>
+                <p class="border-[--primary-yellow] border-b-4 mb-5"></p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque leo nec quam
                     ullamcorper, at
                     suscipit elit pharetra.</p>
@@ -153,6 +158,45 @@
         </div>
     </footer>
 
+    <aside class="cyberpunk">
+        <ul>
+            <li class="flex justify-between items-center">
+                <a href="https://www.facebook.com/TheoSuaking/" target="_blank">
+                    <div class="flex items-center space-x-2">
+                        <svg class="relative" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+                            viewBox="0 0 24 24">
+                            <path fill="currentColor"
+                                d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95" />
+                        </svg>
+                        <span class="font-bold">Facebook</span>
+                    </div>
+                </a>
+            </li>
+            <li class="flex justify-between items-center">
+                <a href="https://github.com/AlterThego" target="_blank">
+                    <div class="flex items-center space-x-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+                            <path fill="currentColor"
+                                d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33s1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2" />
+                        </svg>
+                        <span class="font-bold">Github</span>
+                    </div>
+                </a>
+            </li>
+
+            <li class="flex justify-between items-center">
+                <a href="mailto: theosuaking@gmail.com" target="_blank">
+                    <div class="flex items-center space-x-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+                            <path fill="currentColor"
+                                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 4l-8 5l-8-5V6l8 5l8-5z" />
+                        </svg>
+                        <span class="font-bold">Email</span>
+                    </div>
+                </a>
+            </li>
+        </ul>
+    </aside>
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
